Add mail api, CRC tests use full mail data